Make x3 more useful error-prone rules errors instead of warnings
* http://errorprone.info/bugpattern/IntLongMath
* http://errorprone.info/bugpattern/FloatCast
* http://errorprone.info/bugpattern/ClassNewInstance
* http://errorprone.info/bugpattern/ConstructorInvokesOverridable
* http://errorprone.info/bugpattern/ThreeLetterTimeZoneID
* http://errorprone.info/bugpattern/UnsafeFinalization

and handle their impacts

Change-Id: I87d7cd5f4fe3f5b810acaab421ac9e5da8fb9c0b
Signed-off-by: Michael Vorburger <vorburger@redhat.com>